@@ -20,6 +20,8 @@ keywords =
 [extras]
 testing=
     pyspark
+dataset=
+    s3fs
 [entry_points]
 console_scripts =
     divina = divina.cli.cli:divina
