@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* testing build\_publish\_dev
 * WIP starting cli
 * WIP starting cli
 * WIP starting cli
